:sparkles: Change travel functionality